--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <div id="test">
-	This is a start template for testing of the lightboxing plug-in.
+	<p>This is a start template for testing of the lightboxing plug-in.</p>
+
+	<a href="http://lorempixel.com/1024/768/technics/" data-boxing="true"><img src="http://lorempixel.com/150/150/technics/" alt=""></a>
 </div>
 </body>
