--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <div id="test">
 	<p>This is a start template for testing of the lightboxing plug-in.</p>
 
-	<a href="http://lorempixel.com/1024/768/technics/" data-boxing="true"><img src="http://lorempixel.com/150/150/technics/" alt=""></a>
+<p><a href="http://lorempixel.com/1024/768/technics/" data-boxing="true"><img src="http://lorempixel.com/150/150/technics/" alt=""></a></p>
+<p><a href="http://lorempixel.com/1024/768/fashion/" data-boxing="true"><img src="http://lorempixel.com/150/150/fashion/" alt=""></a></p>
 </div>
 </body>
