--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <div id="test">
 	<p>This is a start template for testing of the lightboxing plug-in.</p>
 
+
+<p><a href="http://placehold.it/1024x768" data-boxing="true"><img src="http://placehold.it/150x150" alt=""></p>
+<p><a href="http://placehold.it/1024x768" data-boxing="true"><img src="http://placehold.it/150x150" alt=""></p>
+<!--
 <p><a href="http://lorempixel.com/1024/768/technics/" data-boxing="true"><img src="http://lorempixel.com/150/150/technics/" alt=""></a></p>
-<p><a href="http://lorempixel.com/1024/768/fashion/" data-boxing="true"><img src="http://lorempixel.com/150/150/fashion/" alt=""></a></p>
+<p><a href="http://lorempixel.com/1024/768/fashion/" data-boxing="true"><img src="http://lorempixel.com/150/150/fashion/" alt=""></a></p>-->
 </div>
 </body>
