added image with a bigger file size to test fade in

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<p>This is a start template for testing of the lightboxing plug-in.</p>
 
 
+<p><a href="http://www.rodbikes.com/images/low-res/blue-white-tandem.jpg" data-boxing="true"><img src="http://placehold.it/150x150" alt=""></p>
+
+
 <p><a href="http://placehold.it/1024x768" data-boxing="true"><img src="http://placehold.it/150x150" alt=""></p>
 <p><a href="http://placehold.it/1024x768" data-boxing="true"><img src="http://placehold.it/150x150" alt=""></p>
 <!--
